docs(swagger): spi docs and type update
